--- a/index.html
+++ b/index.html
@@ -1,11 +1,116 @@
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <script src="script.js"></script>
-    <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
-  </head>
-  <body>
-    <h1>Hello there!</h1>
-    <a href="/me.html">My other page</a>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Light & Dark Mode</title>
+  <link rel="icon" type="image/png" href="favicon.png" />
+  <meta name="author" content="ayoubkhan (https://www.mayoubkhan.com/)" />
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
+
+  <!-- // main css file  -->
+  <link rel="stylesheet" href="./css/app.css" />
+
+</head>
+
+<body>
+  <header class="nav" id="nav">
+    <ul>
+      <li><a href="#home" class="nav-link">&lt;The Beta Coders /&gt;</a></li>
+      <li><a href="#about" class="nav-link">ABOUT</a></li>
+      <li><a href="#projects" class="nav-link">Buttons</a></li>
+      <li><a href="#contact" class="nav-link">Links</a></li>
+    </ul>
+  </header>
+
+  <!-- Dark Mode Switcher -->
+  <div class="theme-switch-wrapper">
+    <!-- Text and icon -->
+    <span id="toggle-icon">
+      <span class="toggle-text">Light Mode</span>
+      <i class="fas fa-sun"></i>
+    </span>
+    <!-- Switcher -->
+    <label class="theme-switch">
+      <input type="checkbox" />
+      <div class="slider round"></div>
+    </label>
+  </div>
+
+  <!-- Home Section -->
+  <section id="home">
+    <div class="title-group">
+      <h1>&lt;The Beta Coders /&gt;</h1>
+      <h2>Things aren’t always #000000 and #FFFFFF</h2>
+    </div>
+  </section>
+
+  <!-- About Section -->
+  <svg class="wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+    <path fill-opacity="1"
+      d="M0,320L120,298.7C240,277,480,235,720,229.3C960,224,1200,256,1320,272L1440,288L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z">
+    </path>
+  </svg>
+  <section id="about">
+    <h1>Services</h1>
+    <div class="about-container">
+      <div class="image-container">
+        <h2>Web Dev.</h2>
+        <img src="img/1.png" alt="Proud Coder" id="image1" />
+      </div>
+      <div class="image-container">
+        <h2>Android Dev.</h2>
+        <img src="img/2.png" alt="Feeling Proud" id="image2" />
+      </div>
+      <div class="image-container">
+        <h2>IOs Dev.</h2>
+        <img src="img/3.png" alt="Conceptual idea" id="image3" />
+      </div>
+    </div>
+  </section>
+  <svg class="wave-end" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+    <path fill-opacity="1"
+      d="M0,64L80,80C160,96,320,128,480,122.7C640,117,800,75,960,64C1120,53,1280,75,1360,85.3L1440,96L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z">
+    </path>
+  </svg>
+
+  <!-- Projects Section -->
+  <section id="projects">
+    <h1>Buttons</h1>
+    <div class="buttons">
+      <button class="primary">Primary</button>
+      <button class="secondary">Secondary</button>
+      <button class="secondary outline">Alt Outline</button>
+    </div>
+    <div class="text-box" id="text-box">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis ipsam
+        praesentium vero corrupti deleniti ab minus ut quidem cum commodi?
+        Animi harum excepturi, illum aperiam cum reiciendis sed maiores magni!
+      </p>
+    </div>
+  </section>
+  <!-- Contact Section -->
+  <svg class="wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+    <path fill-opacity="1"
+      d="M0,320L120,298.7C240,277,480,235,720,229.3C960,224,1200,256,1320,272L1440,288L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z">
+    </path>
+  </svg>
+  <section id="contact">
+    <div class="social-icons">
+      <i class="fab fa-instagram"></i>
+      <i class="fab fa-codepen"></i>
+      <i class="fab fa-linkedin-in"></i>
+      <i class="fab fa-youtube"></i>
+      <i class="fab fa-github"></i>
+    </div>
+  </section>
+  <!-- Script -->
+  <script src="script.js"></script>
+</body>
+
 </html>
